--- a/src/main/webapp/admin/organizers.xhtml
+++ b/src/main/webapp/admin/organizers.xhtml
@@ -13,6 +13,7 @@
 
                 <div class="ms-auto p-4" style="max-height: calc(100vh - 48px); width: calc(100% - 280px)">
                     <h1 class="text-2xl mb-1 font-bold">Organizers.</h1>
+                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, debitis. Sapiente dolorem modi minus ea.
                     </p>
 
                     <div class="d-flex gap-2 w-100 justify-content-end align-items-center my-2">
