--- a/src/main/webapp/auth/register.xhtml
+++ b/src/main/webapp/auth/register.xhtml
@@ -9,7 +9,7 @@
 <h:body>
     <ui:composition template="/WEB-INF/layouts/template-no-top.xhtml">
         <ui:define name="content">
-            <div class="w-100 d-flex ">
+            <div class="w-100 d-flex min-vh-100 justify-content-center align-items-center">
                 <div class="col-md-5 col-12 vh-100 d-flex flex-column justify-content-center align-items-center text-center overflow-y-auto">
                     <h:form styleClass="w-100 p-5 text-start">
                         <h1 class="font-bold mb-5 text-gray text-center">Register</h1>
@@ -54,11 +54,7 @@
 
                 </div>
 
-                <div class="col-md-7 p-5 d-flex position-relative align-items-center col-auto zindex-2">
-                    <h2 class="text-6xl font-extrabold text-white zindex-2">1988Events.</h2>
-                    <div class="position-absolute top-0 zindex-1 ui-bg-cover start-0 w-100 h-100" style="background: url('https://c0.wallpaperflare.com/preview/387/612/909/friends-meetings-event-people.jpg'); background-repeat: no-repeat; background-size: cover">
-                    </div>
-                </div>
+
 
             </div>
         </ui:define>
