--- a/src/main/webapp/organizer/index.xhtml
+++ b/src/main/webapp/organizer/index.xhtml
@@ -1,43 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<body>
+<ui:composition template="/WEB-INF/layouts/template.xhtml">
+    <ui:define name="content">
+        <div class="d-flex">
 
-<f:view>
-    <h:head>
-        <title>Events</title>
-        <h:outputStylesheet library="css" name="alternative_global.css"/>
-        <h:outputStylesheet library="css" name="alternative_style.css"/>
-        <!-- styles -->
-        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css'/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- scripts -->
-        <script type="application/javascript"
-                src="https://code.jquery.com/jquery-3.7.1.min.js"
-                integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-                crossorigin="anonymous"></script>
-        <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js'></script></h:head>
-    <h:body class="bg-light text-dark">
+            <div class="ms-auto p-4" style="max-height: calc(100vh - 48px); width: calc(100% - 280px)">
 
-        <ui:insert name="top">
-            <ui:include src="top.xhtml"/>
-        </ui:insert>
-
-        <div id="page" class="container mt-5 bg-white shadow-sm p-3" >
-            <div id="content" class="p-3">
-                <ui:insert name="content">
-
-                </ui:insert>
-            </div>
-            <div id="footer" class="pt-3 border-top">
+                <ui:include src="components/list-events.xhtml" />
 
             </div>
         </div>
-        <h:outputScript library="js" name="app.js"/>
-        <h:outputScript library="js" name="gemini.js"/>
-    </h:body>
-</f:view>
+    </ui:define>
+</ui:composition>
+</body>
 </html>
